test/sema/positive/borrowsema/assign_struct_partial_borrow_2.impala
struct S {
    x1: int,
    x2: &int
}

fn f() -> () {
    let a = 4;
    let mut b = S { x1: 4, x2: &a };
    let c = &*b.x2;
    let d = *b.x2;
    b.x1 = 6;
}
